XWiki with Let's Encrypt in a Docker Compose

--- a/xwiki-traefik-letsencrypt-docker-compose.yml
+++ b/xwiki-traefik-letsencrypt-docker-compose.yml
@@ -14,6 +14,7 @@
 
 # Communication
 # Chat with IT pros on Discord: https://discord.com/invite/D7fGMYjdR9
+# Chat with IT pros on Telegram https://t.me/heyValdemarCOMchat
 # Reach me at ask@sre.gg
 
 # Give Thanks
