--- a/xwiki-traefik-letsencrypt-docker-compose.yml
+++ b/xwiki-traefik-letsencrypt-docker-compose.yml
@@ -1,16 +1,66 @@
-# XWiki with Let's Encrypt in a Docker Compose
+# XWiki with Let's Encrypt Using Docker Compose
+
+# The complete installation guide is available on my https://www.heyvaldemar.com/install-xwiki-using-docker-compose/
+
+# Change variables in the `.env` to meet your requirements.
+# Note that the `.env` file should be in the same directory as `xwiki-traefik-letsencrypt-docker-compose.yml`.
+
+# Create networks for your services before deploying the configuration using the commands:
+# `docker network create traefik-network`
+# `docker network create xwiki-network`
+
+# Deploy XWiki using Docker Compose:
+# `docker compose -f xwiki-traefik-letsencrypt-docker-compose.yml -p xwiki up -d`
+
+# Backups
+# The `backups` container in the configuration is responsible for the following:
+# 1. **Database Backup**: Creates compressed backups of the PostgreSQL database using pg_dump.
+# Customizable backup path, filename pattern, and schedule through variables like `POSTGRES_BACKUPS_PATH`, `POSTGRES_BACKUP_NAME`, and `BACKUP_INTERVAL`.
+# 2. **Application Data Backup**: Compresses and stores backups of the application data on the same schedule. Controlled via variables such as `DATA_BACKUPS_PATH`, `DATA_BACKUP_NAME`, and `BACKUP_INTERVAL`.
+# 3. **Backup Pruning**: Periodically removes backups exceeding a specified age to manage storage.
+# Customizable pruning schedule and age threshold with `POSTGRES_BACKUP_PRUNE_DAYS` and `DATA_BACKUP_PRUNE_DAYS`.
+# By utilizing this container, consistent and automated backups of the essential components of your instance are ensured.
+# Moreover, efficient management of backup storage and tailored backup routines can be achieved through easy and flexible configuration using environment variables.
+
+# # xwiki-restore-database.sh Description
+# This script facilitates the restoration of a database backup.
+# 1. **Identify Containers**: It first identifies the service and backups containers by name, finding the appropriate container IDs.
+# 2. **List Backups**: Displays all available database backups located at the specified backup path.
+# 3. **Select Backup**: Prompts the user to copy and paste the desired backup name from the list to restore the database.
+# 4. **Stop Service**: Temporarily stops the service to ensure data consistency during restoration.
+# 5. **Restore Database**: Executes a sequence of commands to drop the current database, create a new one, and restore it from the selected compressed backup file.
+# 6. **Start Service**: Restarts the service after the restoration is completed.
+# To make the `xwiki-restore-database.shh` script executable, run the following command:
+# `chmod +x xwiki-restore-database.sh`
+# Usage of this script ensures a controlled and guided process to restore the database from an existing backup.
+
+# # xwiki-restore-application-data.sh Description
+# This script is designed to restore the application data.
+# 1. **Identify Containers**: Similarly to the database restore script, it identifies the service and backups containers by name.
+# 2. **List Application Data Backups**: Displays all available application data backups at the specified backup path.
+# 3. **Select Backup**: Asks the user to copy and paste the desired backup name for application data restoration.
+# 4. **Stop Service**: Stops the service to prevent any conflicts during the restore process.
+# 5. **Restore Application Data**: Removes the current application data and then extracts the selected backup to the appropriate application data path.
+# 6. **Start Service**: Restarts the service after the application data has been successfully restored.
+# To make the `xwiki-restore-application-data.sh` script executable, run the following command:
+# `chmod +x xwiki-restore-application-data.sh`
+# By utilizing this script, you can efficiently restore application data from an existing backup while ensuring proper coordination with the running service.
 
 # Author
-# hey, I’m Vladimir Mikhalev, but my friends call me Valdemar.
+# I’m Vladimir Mikhalev, the Docker Captain, but my friends can call me Valdemar.
+# https://www.docker.com/captains/vladimir-mikhalev/
 
 # My website with detailed IT guides: https://www.heyvaldemar.com/
 # Follow me on YouTube: https://www.youtube.com/channel/UCf85kQ0u1sYTTTyKVpxrlyQ?sub_confirmation=1
 # Follow me on Twitter: https://twitter.com/heyValdemar
 # Follow me on Instagram: https://www.instagram.com/heyvaldemar/
+# Follow me on Threads: https://www.threads.net/@heyvaldemar
+# Follow me on Mastodon: https://hachyderm.io/@heyValdemar
+# Follow me on Bluesky: https://bsky.app/profile/heyvaldemar.bsky.social
 # Follow me on Facebook: https://www.facebook.com/heyValdemarFB/
 # Follow me on TikTok: https://www.tiktok.com/@heyvaldemar
-# Follow me on [LinkedIn](https://www.linkedin.com/in/heyvaldemar/)
-# Follow me on [GitHub](https://github.com/heyvaldemar)
+# Follow me on LinkedIn: https://www.linkedin.com/in/heyvaldemar/
+# Follow me on GitHub: https://github.com/heyvaldemar
 
 # Communication
 # Chat with IT pros on Discord: https://discord.gg/AJQGCCBcqf
@@ -23,41 +73,33 @@
 # Support on Ko-fi: https://ko-fi.com/heyValdemar
 # Support on PayPal: https://www.paypal.com/paypalme/heyValdemarCOM
 
-# Install Docker Engine and Docker Compose by following my guide: https://www.heyvaldemar.com/install-docker-engine-and-docker-compose-on-ubuntu-server/
-
-# Run xwiki-restore-application-data.sh to restore application data if needed.
-# Run xwiki-restore-database.sh to restore database if needed.
-
-# Deploy XWiki server with a Docker Compose using the command:
-# docker compose -f xwiki-traefik-letsencrypt-docker-compose.yml -p xwiki up -d
-
-# Detailed installation guide can be found on my website: https://www.heyvaldemar.com/install-xwiki-with-docker-compose/
+networks:
+  xwiki-network:
+    external: true
+  traefik-network:
+    external: true
 
 volumes:
   xwiki-data:
   xwiki-postgres:
-  traefik-certificates:
+  xwiki-postgres-backup:
   xwiki-data-backups:
-  xwiki-postgres-backups:
+  xwiki-database-backups:
+  traefik-certificates:
 
 services:
   postgres:
-    # Image tag (replace with yours)
-    image: postgres:14
+    image: ${XWIKI_POSTGRES_IMAGE_TAG}
     volumes:
       - xwiki-postgres:/var/lib/postgresql/data
     environment:
-      # Database name (replace with yours)
-      POSTGRES_DB: xwiki
-      # Database user (replace with yours)
-      POSTGRES_USER: xwikidbuser
-      # Database password (replace with yours)
-      POSTGRES_PASSWORD: b*!HJBJd4*q!L4qHpjD2K6!
-      # Postgres root password (replace with yours)
-      POSTGRES_ROOT_PASSWORD: yUN!y@6Ba.m!ZLkbkAX49y@
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8"
+      POSTGRES_DB: ${XWIKI_DB_NAME}
+      POSTGRES_USER: ${XWIKI_DB_USER}
+      POSTGRES_PASSWORD: ${XWIKI_DB_PASSWORD}
+    networks:
+      - xwiki-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -h 127.0.0.1"]
+      test: [ "CMD", "pg_isready", "-q", "-d", "${XWIKI_DB_NAME}", "-U", "${XWIKI_DB_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -65,18 +107,17 @@ services:
     restart: unless-stopped
 
   xwiki:
-    # Image tag (replace with yours)
-    image: xwiki:14.4-postgres-tomcat
+    image: ${XWIKI_IMAGE_TAG}
     volumes:
-      - xwiki-data:/usr/local/xwiki
+      - xwiki-data:${DATA_PATH}
     environment:
       DB_HOST: postgres
-      # Database name (replace with yours)
-      DB_DATABASE: xwiki
-      # Database user (replace with yours)
-      DB_USER: xwikidbuser
-      # Database password (replace with yours)
-      DB_PASSWORD: b*!HJBJd4*q!L4qHpjD2K6!
+      DB_DATABASE: ${XWIKI_DB_NAME}
+      DB_USER: ${XWIKI_DB_USER}
+      DB_PASSWORD: ${XWIKI_DB_PASSWORD}
+    networks:
+      - xwiki-network
+      - traefik-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/"]
       interval: 10s
@@ -85,8 +126,7 @@ services:
       start_period: 90s
     labels:
       - "traefik.enable=true"
-      # XWiki URL (replace with yours)
-      - "traefik.http.routers.xwiki.rule=Host(`xwiki.heyvaldemar.net`)"
+      - "traefik.http.routers.xwiki.rule=Host(`${XWIKI_HOSTNAME}`)"
       - "traefik.http.routers.xwiki.service=xwiki"
       - "traefik.http.routers.xwiki.entrypoints=websecure"
       - "traefik.http.services.xwiki.loadbalancer.server.port=8080"
@@ -103,10 +143,9 @@ services:
         condition: service_healthy
 
   traefik:
-    # Image tag (replace with yours)
-    image: traefik:2.8
+    image: ${TRAEFIK_IMAGE_TAG}
     command:
-      - "--log.level=WARN"
+      - "--log.level=${TRAEFIK_LOG_LEVEL}"
       - "--accesslog=true"
       - "--api.dashboard=true"
       - "--api.insecure=true"
@@ -119,8 +158,7 @@ services:
       - "--providers.docker.endpoint=unix:///var/run/docker.sock"
       - "--providers.docker.exposedByDefault=false"
       - "--certificatesresolvers.letsencrypt.acme.tlschallenge=true"
-      # Email for Let's Encrypt (replace with yours)
-      - "--certificatesresolvers.letsencrypt.acme.email=callvaldemar@gmail.com"
+      - "--certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_ACME_EMAIL}"
       - "--certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json"
       - "--metrics.prometheus=true"
       - "--metrics.prometheus.buckets=0.1,0.3,1.2,5.0"
@@ -129,6 +167,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - traefik-certificates:/etc/traefik/acme
+    networks:
+      - traefik-network
     ports:
       - "80:80"
       - "443:443"
@@ -140,8 +180,7 @@ services:
       start_period: 5s
     labels:
       - "traefik.enable=true"
-      # Traefik URL (replace with yours)
-      - "traefik.http.routers.dashboard.rule=Host(`traefik.xwiki.heyvaldemar.net`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_HOSTNAME}`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.services.dashboard.loadbalancer.server.port=8080"
@@ -149,10 +188,7 @@ services:
       - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
       - "traefik.http.services.dashboard.loadbalancer.passhostheader=true"
       - "traefik.http.routers.dashboard.middlewares=authtraefik"
-      # Basic Authentication for Traefik Dashboard
-      # Username: traefikadmin (replace with yours)
-      # Passwords must be encoded using MD5, SHA1, or BCrypt https://hostingcanada.org/htpasswd-generator/
-      - "traefik.http.middlewares.authtraefik.basicauth.users=traefikadmin:$$2y$$10$$sMzJfirKC75x/hVpiINeZOiSm.Jkity9cn4KwNkRvO7hSQVFc5FLO"
+      - "traefik.http.middlewares.authtraefik.basicauth.users=${TRAEFIK_BASIC_AUTH}"
       - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.http-catchall.entrypoints=web"
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
@@ -160,43 +196,36 @@ services:
     restart: unless-stopped
 
   backups:
-    # Image tag (replace with yours)
-    image: postgres:14
-    # Database backups prune interval (replace with yours). Default is 7 days.
-    # find /srv/xwiki-postgres/backups -type f -mtime +7 | xargs rm -f
-
-    # Application data backups prune interval (replace with yours). Default is 7 days.
-    # find /srv/xwiki-application-data/backups -type f -mtime +7 | xargs rm -f
-
-    # XWiki backups interval (replace with yours). Default is 1 day.
-    # sleep 24h
-
-    # Run xwiki-restore-application-data.sh to restore application data if needed.
-    # Run xwiki-restore-database.sh to restore database if needed.
-    command: sh -c 'sleep 30m
-             && while true; do
-             PGPASSWORD="$$(echo $$POSTGRES_PASSWORD)"
-             pg_dump
-             -h postgres
-             -p 5432
-             -d xwiki
-             -U xwikidbuser | gzip > /srv/xwiki-postgres/backups/xwiki-postgres-backup-$$(date "+%Y-%m-%d_%H-%M").gz
-             && tar -zcpf /srv/xwiki-application-data/backups/xwiki-application-data-backup-$$(date "+%Y-%m-%d_%H-%M").tar.gz /usr/local/xwiki
-             && find /srv/xwiki-postgres/backups -type f -mtime +7 | xargs rm -f
-             && find /srv/xwiki-application-data/backups -type f -mtime +7 | xargs rm -f;
-             sleep 24h; done'
+    image: ${XWIKI_POSTGRES_IMAGE_TAG}
+    command: >-
+      sh -c 'sleep $BACKUP_INIT_SLEEP &&
+      while true; do
+        pg_dump -h postgres -p 5432 -d $XWIKI_DB_NAME -U $XWIKI_DB_USER | gzip > $POSTGRES_BACKUPS_PATH/$POSTGRES_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").gz &&
+        tar -zcpf $DATA_BACKUPS_PATH/$DATA_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").tar.gz $DATA_PATH &&
+        find $POSTGRES_BACKUPS_PATH -type f -mtime +$POSTGRES_BACKUP_PRUNE_DAYS | xargs rm -f &&
+        find $DATA_BACKUPS_PATH -type f -mtime +$DATA_BACKUP_PRUNE_DAYS | xargs rm -f;
+        sleep $BACKUP_INTERVAL; done'
     volumes:
-      - xwiki-data:/usr/local/xwiki
-      # Application data backups location
-      - xwiki-data-backups:/srv/xwiki-application-data/backups
-      # Database backups location
-      - xwiki-postgres-backups:/srv/xwiki-postgres/backups
+      - xwiki-postgres-backup:/var/lib/postgresql/data
+      - xwiki-data:${DATA_PATH}
+      - xwiki-data-backups:${DATA_BACKUPS_PATH}
+      - xwiki-database-backups:${POSTGRES_BACKUPS_PATH}
     environment:
-      # Database password (replace with yours)
-      POSTGRES_PASSWORD: b*!HJBJd4*q!L4qHpjD2K6!
+      XWIKI_DB_NAME: ${XWIKI_DB_NAME}
+      XWIKI_DB_USER: ${XWIKI_DB_USER}
+      PGPASSWORD: ${XWIKI_DB_PASSWORD}
+      BACKUP_INIT_SLEEP: ${BACKUP_INIT_SLEEP}
+      BACKUP_INTERVAL: ${BACKUP_INTERVAL}
+      POSTGRES_BACKUP_PRUNE_DAYS: ${POSTGRES_BACKUP_PRUNE_DAYS}
+      DATA_BACKUP_PRUNE_DAYS: ${DATA_BACKUP_PRUNE_DAYS}
+      POSTGRES_BACKUPS_PATH: ${POSTGRES_BACKUPS_PATH}
+      DATA_BACKUPS_PATH: ${DATA_BACKUPS_PATH}
+      DATA_PATH: ${DATA_PATH}
+      POSTGRES_BACKUP_NAME: ${POSTGRES_BACKUP_NAME}
+      DATA_BACKUP_NAME: ${DATA_BACKUP_NAME}
+    networks:
+      - xwiki-network
     restart: unless-stopped
     depends_on:
       postgres:
-        condition: service_healthy
-      xwiki:
         condition: service_healthy
